clang/test/BSC/Negative/NullabilityCheck/function_return.cbs
// RUN: %clang_cc1 -verify %s

_Safe int *_Borrow foo1(int *_Borrow a);
_Safe void test1(void) {
    int a = 10;
    int *_Borrow p1 = foo1(&_Mut a);
    int *_Borrow _Nullable p2 = foo1(&_Mut a);
}

_Safe void safe_free(int *_Owned _Nullable p);

_Safe int *_Owned foo2(void);
_Safe void test2(void) {
    int *_Owned p1 = foo2();
    int *_Owned _Nullable p2 = foo2();
    safe_free(p1);
    safe_free(p2);
}

_Safe int *_Borrow _Nullable foo3(int* _Borrow a);  
_Safe void test3(void) {
    int a = 10;
    int *_Borrow p1 = foo3(&_Mut a);  // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    int *_Borrow _Nullable p2 = foo3(&_Mut a);
}

_Safe int *_Owned _Nullable foo4(void);  
_Safe void test4(void) {
    int *_Owned p1 = foo4();  // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
    int *_Owned _Nullable p2 = foo4();
    safe_free(p1);
    safe_free(p2);
}

_Safe int *_Borrow foo5(int *_Borrow _Nullable a) {
    return a;  // expected-error {{cannot return nullable pointer type}}
}

_Safe int *_Borrow foo6(int *_Borrow _Nullable a, int* _Borrow p) {
    a = p;
    return a;
}

_Safe int *_Borrow foo7(int *_Borrow _Nullable a, int* _Borrow p) {
    return foo6(a, p);
}